Solution to Task 0 to Task 3 - AirBnB Clone - Web Static

--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -16,6 +16,12 @@
         <header></header>
         <!-- Page Header Ends -->
 
+        <!-- Div Container Starts -->
+        <div class="container">
+
+        </div>
+        <!-- Div Container Ends -->
+        
         <!-- Page Footer Starts -->
         <footer>
                 <p>Best School</p>
