Solution to Task 4 and Task 5 - AirBnB Clone - Web Static

--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -9,7 +9,7 @@
         <!-- links to the external CSS files -->
         <link rel="stylesheet" href="./styles/4-common.css">
         <link rel="stylesheet" href="./styles/3-header.css">
-        <link rel="stylesheet" href="./styles/4-filters.css">
+        <link rel="stylesheet" href="./styles/5-filters.css">
         <link rel="stylesheet" href="./styles/3-footer.css">
 </head>
 <body>
@@ -22,6 +22,19 @@
                 <!-- Section Filter Starts -->
                 <section class="filters">
                         <button>Search</button>
+                        <!-- Section Filter Location Starts -->
+                        <div class="locations">
+                                <h3>States</h3>
+                                <h4>Asaba, Delta State</h4>
+                        </div>
+                        <!-- Section Filter Location Ends -->
+
+                        <!-- Section Filter Amenities Starts -->
+                        <div class="amenities">
+                                <h3>Amenities</h3>
+                                <h4>Free Wifi, Cyber Cafe</h4>
+                        </div>
+                        <!-- Section Filter Amenities Ends -->
                 </section>
                 <!-- Section Filter Ends -->
         </div>
