Solution to AirBnB Clone Web Static - Task 0 to Task 7

--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Adding Favicon or Website shortcut icon - 0x01 - AirBnB clone - Web static -->
+<!-- Adding a section with the class name Filter and a Search button for the Filters - 0x01 - AirBnB clone - Web static -->
 <html lang="en">
 <head>
         <meta charset="UTF-8">
