--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Adding Favicon or Website shortcut icon - 0x01 - AirBnB clone - Web static -->
+<!-- Adding Locations and Amenities section - 0x01 - AirBnB clone - Web static -->
 <html lang="en">
 <head>
         <meta charset="UTF-8">
