--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -6,9 +6,7 @@
         <title>AirBnB Clone</title>
 </head>
 <body style="margin: 0px; padding: 0px;">
-        <header style="background-color: #ff0000; height: 70px; width: 100%;">
-
-        </header>
+        <header style="background-color: #ff0000; height: 70px; width: 100%;"></header>
         <footer style="background-color: #00ff00; height: 60px; width: 100%; position: fixed; bottom: 0;">
                 <p style="text-align: center; padding: 0px; margin: 0px; line-height: 60px;">Best School</p>
         </footer>
