--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -2,15 +2,15 @@
 <!-- Adding dropdown list to the location and amenities section - 0x01 - AirBnB clone - Web static -->
 <html lang="en">
 <head>
-	<meta charset="UTF-8" />
+	<meta charset="UTF-8">
 	<title>AirBnB Clone</title>
 	<!-- link to the favicon image -->
-	<link rel="shortcut icon" href="./images/icon.png" type="image/x-icon" />
+	<link rel="shortcut icon" href="./images/icon.png" type="image/x-icon">
 	<!-- links to the external CSS files -->
-	<link rel="stylesheet" href="./styles/4-common.css" />
-	<link rel="stylesheet" href="./styles/3-header.css" />
-	<link rel="stylesheet" href="./styles/6-filters.css" />
-	<link rel="stylesheet" href="./styles/3-footer.css" />
+	<link rel="stylesheet" href="./styles/4-common.css">
+	<link rel="stylesheet" href="./styles/3-header.css">
+	<link rel="stylesheet" href="./styles/6-filters.css">
+	<link rel="stylesheet" href="./styles/3-footer.css">
 </head>
 <body>
 	<!-- Page Header Starts -->
