--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -2,16 +2,16 @@
 <!-- Adding Places section - 0x01 - AirBnB clone - Web static -->
 <html lang="en">
 <head>
-	<meta charset="UTF-8" />
+	<meta charset="UTF-8">
 	<title>AirBnB Clone</title>
 	<!-- link to the favicon image -->
-	<link rel="shortcut icon" href="./images/icon.png" type="image/x-icon" />
+	<link rel="shortcut icon" href="./images/icon.png" type="image/x-icon">
 	<!-- links to the external CSS files -->
-	<link rel="stylesheet" href="./styles/4-common.css" />
-	<link rel="stylesheet" href="./styles/3-header.css" />
-	<link rel="stylesheet" href="./styles/6-filters.css" />
-	<link rel="stylesheet" href="./styles/3-footer.css" />
-	<link rel="stylesheet" href="./styles/7-places.css" />
+	<link rel="stylesheet" href="./styles/4-common.css">
+	<link rel="stylesheet" href="./styles/3-header.css">
+	<link rel="stylesheet" href="./styles/6-filters.css">
+	<link rel="stylesheet" href="./styles/3-footer.css">
+	<link rel="stylesheet" href="./styles/7-places.css">
 </head>
 <body>
 	<!-- Page Header Starts -->
