Solution to Task 10

--- a/web_static/100-index.html
+++ b/web_static/100-index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="./styles/3-header.css">
 	<link rel="stylesheet" href="./styles/4-common.css">
 	<link rel="stylesheet" href="./styles/6-filters.css">
-	<link rel="stylesheet" href="./styles/8-places.css">
+	<link rel="stylesheet" href="./styles/100-places.css">
 	<link rel="stylesheet" href="./styles/3-footer.css">
 </head>
 <body>
@@ -84,6 +84,33 @@
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet praesentium facilis dolorum. Excepturi iusto tenet laudantium modi.</p>
 				</div>
 				<!-- Article Description Ends -->
+				<!-- Article Amenities Starts -->
+				<div class="amenities">
+					<h2>Amenities</h2>
+					<ul class="amenity_list">
+						<li class="amenity_item">Toys</li>
+						<li class="amenity_item">TV</li>
+						<li class="amenity_item">WiFi</li>
+					</ul>
+				</div>
+				<!-- Article Amenities Ends -->
+				<!-- Article Reviews Starts -->
+				<div class="reviews">
+					<h2>2 Reviews</h2>
+					<ul>
+						<li>
+							<h3>From Bob Dylan the 27th January 2019</h3>
+						</li>
+						<li>Lorem ipsum dolor sit amet, dolore quod. Libero, corporis. Consectetur quod ducimus facere dolores commodi.</li>
+					</ul>
+					<ul>
+						<li>
+							<h3>From Bob Dylan the 5th June 2020</h3>
+						</li>
+						<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore aliquid dolore quod. Libero, corporis.</li>
+					</ul>
+				</div>
+				<!-- Article Reviews Ends -->
 			</article>
 			<article>
 				<!-- Article header Starts -->
@@ -109,6 +136,33 @@
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet praesentium facilis dolorum. Excepturi iusto teatque.</p>
 				</div>
 				<!-- Article Description Ends -->
+				<!-- Article Amenities Starts -->
+				<div class="amenities">
+					<h2>Amenities</h2>
+					<ul class="amenity_list">
+						<li class="amenity_item">Toys</li>
+						<li class="amenity_item">TV</li>
+						<li class="amenity_item">WiFi</li>
+					</ul>
+				</div>
+				<!-- Article Amenities Ends -->
+				<!-- Article Reviews Starts -->
+				<div class="reviews">
+					<h2>2 Review</h2>
+					<ul>
+						<li>
+							<h3>From Bob Dylan the 5th June 2020</h3>
+						</li>
+						<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore aliquid dolore quod. Libero, corporis.</li>
+					</ul>
+					<ul>
+						<li>
+							<h3>From Bob Dylan the 27th January 2019</h3>
+						</li>
+						<li>Lorem ipsum dolor sit amet, dolore quod. Libero, corporis. Consectetur quod ducimus facere dolores commodi.</li>
+					</ul>
+				</div>
+				<!-- Article Reviews Ends -->
 			</article>
 			<article>
 				<!-- Article header Starts -->
@@ -134,6 +188,33 @@
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet praesentium facilis dolorum. Excepturi iusto tenet</p>
 				</div>
 				<!-- Article Description Ends -->
+				<!-- Article Amenities Starts -->
+				<div class="amenities">
+					<h2>Amenities</h2>
+					<ul class="amenity_list">
+						<li class="amenity_item">Toys</li>
+						<li class="amenity_item">TV</li>
+						<li class="amenity_item">WiFi</li>
+					</ul>
+				</div>
+				<!-- Article Amenities Ends -->
+				<!-- Article Reviews Starts -->
+				<div class="reviews">
+					<h2>2 Reviews</h2>
+					<ul>
+						<li>
+							<h3>From Bob Dylan the 27th January 2019</h3>
+						</li>
+						<li>Lorem ipsum dolor sit amet, dolore quod. Libero, corporis. Consectetur quod ducimus facere dolores commodi.</li>
+					</ul>
+					<ul>
+						<li>
+							<h3>From Bob Dylan the 5th June 2020</h3>
+						</li>
+						<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore aliquid dolore quod. Libero, corporis.</li>
+					</ul>
+				</div>
+				<!-- Article Reviews Ends -->
 			</article>
 		</section>
 		<!-- Section Places Ends -->
